Fix top menu flickering on hover

--- a/assets/css/colors/_base.css
+++ b/assets/css/colors/_base.css
@@ -72,6 +72,8 @@ footer a:hover { color: #ff5722; }
 
 .sm-contra li { border-top: 1x solid #f2f2f2; }
 
+.sm-contra > li { border-bottom: solid 1px #fff; }
+
 .sm-contra > li:hover { border-bottom: solid 1px #ff5722; }
 
 .sm-contra ul { background: rgba(162, 162, 162, 0.1); }
